adding settings to control user deletion
* slit up into admin allowed to delete user accounts and users allowed delete their own account

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -365,6 +365,8 @@ bg:
   setting_commit_logtime_enabled: Разрешаване на отчитането на работното време
   setting_commit_logtime_activity_id: Дейност при отчитане на работното време
   setting_gantt_items_limit: Максимален брой обекти, които да се показват в мрежов график
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   permission_add_project: Създаване на проект
   permission_add_subprojects: Създаване на подпроекти
