--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -377,6 +377,8 @@ en:
   setting_commit_logtime_activity_id: Activity for logged time
   setting_gantt_items_limit: Maximum number of items displayed on the gantt chart
   setting_issue_startdate_is_adddate: Use current date as start date for new issues
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   permission_add_project: Create project
   permission_add_subprojects: Create subprojects
