--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -971,6 +971,8 @@ es:
   label_user_search: "Buscar por usuario:"
   field_visible: Visible
   setting_emails_header: Encabezado de Correos
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   setting_commit_logtime_activity_id: Activity for logged time
   text_time_logged_by_changeset: Applied in changeset %{value}.
