--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -318,6 +318,8 @@
   setting_activity_days_default: Napok megjelenítése a project aktivitásnál
   setting_display_subprojects_issues: Alapértelmezettként mutassa az alprojektek feladatait is a projekteken
   setting_start_of_week: A hét első napja
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   project_module_issue_tracking: Feladat követés
   project_module_time_tracking: Idő rögzítés
