--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -387,6 +387,8 @@ ja:
   setting_commit_logtime_enabled: コミット時に作業時間を記録する
   setting_commit_logtime_activity_id: 作業時間の作業分類
   setting_gantt_items_limit: ガントチャート最大表示項目数
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   permission_add_project: プロジェクトの追加
   permission_add_subprojects: サブプロジェクトの追加
