--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -353,6 +353,8 @@ mk:
   setting_start_of_week: Start calendars on
   setting_rest_api_enabled: Enable REST web service
   setting_cache_formatted_text: Cache formatted text
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   permission_add_project: Креирај проекти
   permission_add_subprojects: Креирај подпроекти
