--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -317,6 +317,8 @@ tr:
   setting_user_format: Kullanıcı gösterim formatı
   setting_activity_days_default: Proje Faaliyetlerinde gösterilen gün sayısı
   setting_display_subprojects_issues: Varsayılan olarak ana projenin ileti listesinde alt proje iletilerini göster
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   project_module_issue_tracking: İleti Takibi
   project_module_time_tracking: Zaman Takibi
