--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -380,6 +380,8 @@ de:
   setting_rest_api_enabled: REST-Schnittstelle aktivieren
   setting_cache_formatted_text: Formatierten Text im Cache speichern
   setting_issue_startdate_is_adddate: Neue Tickets haben "Heute" als Anfangsdatum
+  setting_users_deletable_by_admins: Admins können Nutzeraccounts löschen
+  setting_users_deletable_by_self: Nutzer können ihren Account löschen
 
   permission_add_project: Projekt erstellen
   permission_add_subprojects: Unterprojekte erstellen
