--- a/config/locales/hr.yml
+++ b/config/locales/hr.yml
@@ -341,6 +341,8 @@ hr:
   setting_issue_done_ratio_issue_status: Use the issue status
   setting_start_of_week: Start calendars on
   setting_rest_api_enabled: Enable REST web service
+  setting_users_deletable_by_admins: User accounts deletable by admins
+  setting_users_deletable_by_self: Users allowed to delete their accounts
 
   permission_add_project: Dodaj projekt
   permission_add_subprojects: Dodaj potprojekt
